Config bootstrap and JQuery

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "brkapp",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
+    "mdbootstrap": "^4.14.1"
+  }
 }
